syntax = "proto3";
package Switcheo.polynetworkcosmos.btcx;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1
import "btcx/messages.proto";

option go_package = "github.com/Switcheo/polynetwork-cosmos/x/btcx/types";

// Query defines the gRPC querier service.
service Query {
    // this line is used by starport scaffolding # 2
	rpc DenomInfo(QueryGetDenomInfoRequest) returns (QueryGetDenomInfoResponse) {
		option (google.api.http).get = "/Switcheo/polynetworkcosmos/btcx/DenomInfo/{denom}";
	}
  rpc DenomCrossChainInfo(QueryGetDenomCrossChainInfoRequest) returns (QueryGetDenomCrossChainInfoResponse) {
		option (google.api.http).get = "/Switcheo/polynetworkcosmos/btcx/DenomInfo/{denom}/{chainId}";
	}

}

// this line is used by starport scaffolding # 3
message QueryGetDenomInfoRequest {
	string denom = 1;
}

message QueryGetDenomInfoResponse {
	DenomInfo denomInfo = 1;
}

message QueryGetDenomCrossChainInfoRequest {
	string denom = 1;
  uint64 chainId = 2;
}

message QueryGetDenomCrossChainInfoResponse {
	DenomInfo denomInfo = 1;
	uint64 toChainId = 2;
	string toAssetHash = 3;
}
